--- a/index.html
+++ b/index.html
@@ -37,34 +37,6 @@
 	<!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="assets/styles/css/styles.css"/>
 
-	<!-- Favicon -->
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="/favicon.png" type="image/png">
-	<link rel="shortcut icon" href="http://wagerfield.github.io/parallax/favicon.png" type="image/png">
-
-	<!-- Apple Touch Icons -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
-	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57-precomposed.png">
-
-	<!-- Apple Startup Images -->
-	<link rel="apple-touch-startup-image" href="apple-touch-startup-image-320x460.png" media="(device-width: 320px)">
-	<link rel="apple-touch-startup-image" href="apple-touch-startup-image-640x920.png" media="(device-width: 320px) and (-webkit-device-pixel-ratio: 2)">
-	<link rel="apple-touch-startup-image" href="apple-touch-startup-image-768x1004.png" media="(device-width: 768px) and (orientation: portrait)">
-	<link rel="apple-touch-startup-image" href="apple-touch-startup-image-748x1024.png" media="(device-width: 768px) and (orientation: landscape)">
-	<link rel="apple-touch-startup-image" href="apple-touch-startup-image-1536x2008.png" media="(device-width: 1536px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)">
-	<link rel="apple-touch-startup-image" href="apple-touch-startup-image-2048x1496.png" media="(device-width: 1536px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2)">
-
-	<!-- Google Analytics -->
-	<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	ga('create', 'UA-39594063-4', 'wagerfield.github.io');
-	ga('send', 'pageview');
-	</script>
 
 </head>
 <body>
@@ -96,7 +68,7 @@
 					</li>
 				</ul>
 			</li>
-			<li class="layer" data-depth="0.20"><h1 class="title">parallax<em>.js</em></h1></li>
+			<li class="layer" data-depth="0.20"></li>
 			<li class="layer" data-depth="0.30">
 				<ul class="rope depth-30">
 					<li><img src="assets/images/rope.png" alt="Rope"></li>
@@ -130,61 +102,6 @@
 			<li class="layer" data-depth="0.80"><div class="wave plain depth-80"></div></li>
 			<li class="layer" data-depth="1.00"><div class="wave paint depth-100"></div></li>
 		</ul>
-		<section id="about" class="wrapper about hide accelerate">
-			<div class="cell accelerate">
-				<div class="cables center accelerate">
-					<div class="panel accelerate">
-						<header>
-							<h1>parallax<em>.js</em></h1>
-						</header>
-						<p>WOW, that's deep man! <strong>parallax.js</strong> reacts to the orientation of your smart device, offsetting layers depending on their depth within a scene... Oh, you don't have a smart device? No worries, if no gyroscope or motion detection hardware is available, <strong>parallax.js</strong> uses the position of your cursor instead. Radical.</p>
-						<p>This project is a collaboration between<br><a href="http://matthew.wagerfield.com" target="_blank">Matthew Wagerfield</a> &amp; <a href="http://cargocollective.com/whydontwetry" target="_blank">Claudio Guglieri</a>.</p>
-						<div class="social">
-							<a href="https://twitter.com/wagerfield" class="twitter-follow-button" data-show-count="false">Follow <span class="handle">@wagerfield</span></a>
-							<a href="https://twitter.com/claudioguglieri" class="twitter-follow-button" data-show-count="false">Follow <span class="handle">@claudioguglieri</span></a>
-						</div>
-						<ul class="links">
-							<li><a class="download" href="https://github.com/wagerfield/parallax/archive/master.zip">Download</a></li>
-							<li><a class="github" target="_blank" href="https://github.com/wagerfield/parallax">GitHub</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</section>
-		<button id="toggle" class="toggle i">
-			<div class="cross">
-				<div class="x"></div>
-				<div class="y"></div>
-			</div>
-		</button>
-		<div id="prompt" class="wrapper prompt hide accelerate">
-			<div class="cell accelerate">
-				<div class="panel center unselectable accelerate">
-					<button id="dismiss" class="dismiss">
-						<div class="cross">
-							<div class="x"></div>
-							<div class="y"></div>
-						</div>
-					</button>
-					<div class="tilt-scene">
-						<img class="tilt" src="assets/images/tilt.png">
-					</div>
-					<h2>Tilting is fun!</h2>
-					<p>For the best experience, check out this site on a mobile or tablet equipped with a gyroscope</p>
-					<p>(iPads are the coolest)</p>
-				</div>
-			</div>
-		</div>
-		<footer>
-			<div class="fb-like" data-href="http://wagerfield.github.io/parallax/" data-width="400" data-layout="button_count" data-show-faces="false" data-send="false"></div>
-			<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://wagerfield.github.io/parallax/" data-text="Tilting is fun! Check out #parallax.js by @wagerfield & @claudioguglieri »">Tweet</a>
-		</footer>
-	</div>
-
-	<!-- Awwwards -->
-	<div id="awwwards" class="left white">
-		<a href="http://www.awwwards.com" target="_blank">best websites of the world</a>
-	</div>
 
 	<!-- Scripts -->
 	<script src="assets/scripts/js/libraries.min.js"></script>
