Cleaning up png's

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<!-- Core Meta Data -->
-	<meta name="author" content="Matthew Wagerfield">
+	<meta name="author" content="Greg Kellogg">
 	<meta name="description" content="Simple, lightweight Parallax Engine that reacts to the orientation of a smart device">
 	<meta name="keywords" content="parallax,javascript,jquery,zepto,plugin">
 
@@ -20,16 +20,6 @@
 	<meta property="og:image" content="http://wagerfield.github.io/parallax/assets/images/thumbnail.png">
 	<meta property="og:site_name" content="parallax.js">
 	<meta property="og:title" content="parallax.js">
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://wagerfield.github.io/parallax/index.html">
-
-	<!-- Twitter Card Meta Data -->
-	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="http://wagerfield.github.io/parallax/index.html">
-	<meta name="twitter:creator" content="@wagerfield">
-	<meta name="twitter:title" content="parallax.js">
-	<meta name="twitter:description" content="Simple, lightweight Parallax Engine that reacts to the orientation of a smart device">
-	<meta name="twitter:image" content="http://wagerfield.github.io/parallax/assets/images/thumbnail.png">
 
 	<!-- Humans -->
 	<link rel="author" href="humans.txt" />
